2007-11-30  Nikolas Zimmermann  <zimmermann@kde.org>

        Not reviewed. Trying to fix gtk/qt/wx build. (I expected problems because of the moves)

        * WebCore.pro:
        * webcore-base.bkl:

2007-11-30  Nikolas Zimmermann  <zimmermann@kde.org>

        Rubber stamped by Brady.

        Started platform reorganization (platform/text addition).
        Moving string/text/font related classes into new places - as discussed on webkit-dev.

        In a follow-up commit I'll move classes out of platform/{mac,win,...} into
        platform/text/{mac,win,...}, and also do the ksvg2/ -> svg/ move.

        * WebCore.order:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::insertFragmentForTestRendering):
        * platform/AtomicString.cpp: Removed.
        * platform/AtomicString.h: Removed.
        * platform/AtomicStringImpl.h: Removed.
        * platform/Base64.cpp: Removed.
        * platform/Base64.h: Removed.
        * platform/BidiContext.cpp: Removed.
        * platform/BidiContext.h: Removed.
        * platform/BidiResolver.h: Removed.
        * platform/CString.cpp: Removed.
        * platform/CString.h: Removed.
        * platform/CharacterNames.h: Removed.
        * platform/CharsetData.h: Removed.
        * platform/Font.cpp: Removed.
        * platform/Font.h: Removed.
        * platform/FontCache.cpp: Removed.
        * platform/FontCache.h: Removed.
        * platform/FontData.cpp: Removed.
        * platform/FontData.h: Removed.
        * platform/FontDescription.h: Removed.
        * platform/FontFallbackList.cpp: Removed.
        * platform/FontFallbackList.h: Removed.
        * platform/FontFamily.cpp: Removed.
        * platform/FontFamily.h: Removed.
        * platform/FontSelector.h: Removed.
        * platform/GlyphBuffer.h: Removed.